CHANGES file for Games::Bingo

$Id: CHANGES 1870 2007-08-12 19:28:13Z jonasbn $

HEAD

- Added t/changes.t, Test::CPAN::Changes test

- Aligned versions of all modules included in distribution

0.15 2007.08.12 (Update not necessary)

- Refactored constructor for Games::Bingo::ColumnCollection so ref of
  class was removed. Updated version to 0.03

- Refactored constructor for Games::Bingo::Column so ref of class was
  removed. Updated version to 0.03

- Refactored constructor for Games::Bingo::Card so ref of class was
  removed. Updated version to 0.04

- Refactored out some code in Games::Bingo::Card, which was commented as
  unimplemented, I cannot remember what and why so it goes

- Refactored constructor for Games::Bingo so ref of class was removed

- Added test inheritance t/MyBingo.pm and t/inheritance.t

- Added more tests of Games::Bingo in general adding to overall coverage

- Refactored out check for parameter, which would always be set

- Fixed a problem in Build.PL scripts directory no longers existing,
  bingo.pl is located in bin, this should address the high magnitude
  of failing tests


0.14 2007.08.08 (Update not necessary)

- NB! a minor API change, the splitnumber method has moved from
  Games::Bingo::Card to Games::Bingo

- Updated Build.PL to more contemporary version

- Updated MANIFEST.SKIP to more contemporary version

- Applied minor POD patch from Mike Castle to Card.pm and Bingo.pm

- Cleaned out use lib statements from t/*.t files

- Cleaned some more of the tests

- Added scripts statement to Build.PL, to avoid problems with auto
  generated Makefile.PL, when this is enabled in Build.PL

- Due to problems with coverage testing, module coverage showing up as
  n/a for some of the core classes I decided to clean up the code a bit.
  Coverage now works and the problem seemed to be circular usage of
  modules, more details on the cleaning below

- I have refactored Games::Bingo so it no longer inherits from
  Games::Bingo::Card
